# vanilla-installer

./: demo.json  recipe.json
data/: meson.build  org.vanillaos.Installer.desktop.in
data/icons/: meson.build
debian/: changelog
vanilla_installer/: main.py  meson.build  vanilla-installer.gresource.xml
vanilla_installer/core/: meson.build
vanilla_installer/defaults/: disk.py  meson.build  welcome.py
vanilla_installer/gtk/: confirm.ui  default-disk.ui  default-welcome.ui  dialog-disk-confirm.ui  dialog-disk.ui  dialog-poweroff.ui  done.ui  progress.ui  widget-partition.ui  window.ui
vanilla_installer/utils/: builder.py  processor.py
vanilla_installer/views/: confirm.py  progress.py
vanilla_installer/windows/: dialog_poweroff.py  meson.build
